# Testing-in-Python

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
dags/: dag_load_data_to_pg.py
dags/etl/: dag_load_data_to_pg.py
dags/utils_for_orchestration/: utils_api.py  utils_dict.py  utils_load_to_postgres.py  utils_str.py  utils_transform.py
handles/dwh/: create_schema.py  create_table_for_users.py
handles/oltp/: execute_custom_query.py  get_postgres_credentials.py
simple/: main.py
tests/: test_simple_function.py  test_typed_simple_function.py
tests/dags/etl/: test_dag_load_data_to_pg.py
tests/dags/utils_for_orchestration/: test_utils_api.py  test_utils_dict.py  test_utils_load_to_postgres.py  test_utils_str.py  test_utils_transform.py
tests/simple/: test_simple_function.py  test_typed_simple_function.py
