[project]
name = "project-16-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.10.4",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "unit: mark test as unit test",
    "integration: mark test as integration test",
    "db: mark test as using a database connection"
]
