[project]
name = "project-16-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.10.4",
    "apache-airflow-providers-postgres>=6.4.1",
    "dotenv>=0.9.9",
    "postgres>=4.0",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "sqlalchemy>=1.4.54",
]

[tool.pytest.ini_options]
markers = [
    "unit: mark test as unit test",
    "integration: mark test as integration test",
    "db: mark test as using a database connection"
]
